--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "next.js-ecommerce-store-winter-2025-eu-nagisa-riegler",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "next": "15.1.7",
@@ -18,6 +19,20 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.26.0",
+    "eslint-config-upleveled": "^9.2.3",
+    "prettier": "^3.5.3",
+    "stylelint": "^16.19.1",
+    "stylelint-config-upleveled": "^1.1.9",
     "typescript": "^5"
+  },
+  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt",
+      "canvas",
+      "libpg-query",
+      "sharp"
+    ]
   }
 }
