--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,6 @@ next-env.d.ts
 # Playwright
 node_modules/
 /test-results/
-/playwright-report/
+/playwright/report/
 /blob-report/
 /playwright/.cache/
