--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@upleveled/ley": "0.9.2",
     "dayjs": "1.11.13",
     "dotenv-safe": "9.1.0",
+    "glob": "7.2.3",
+    "inflight": "1.0.6",
     "next": "15.1.7",
     "postgres": "3.4.5",
     "react": "^19.1.1",
@@ -44,5 +46,16 @@
     "stylelint": "^16.24.0",
     "stylelint-config-upleveled": "^2.0.2",
     "typescript": "^5.9.2"
+  },
+  "packageManager": "pnpm@10.3.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "@parcel/watcher",
+      "unrs-resolver",
+      "bcrypt",
+      "libpg-query",
+      "sharp"
+    ]
   }
 }
