Update eslint plugin

--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "@upleveled/ley": "0.9.2",
     "dayjs": "1.11.13",
     "dotenv-safe": "9.1.0",
-    "glob": "7.2.3",
-    "inflight": "1.0.6",
+    "eslint-plugin-sql": "^3.2.2",
     "next": "15.1.7",
     "postgres": "3.4.5",
     "react": "^19.1.1",
@@ -29,7 +28,7 @@
   "devDependencies": {
     "@jest/globals": "30.0.4",
     "@playwright/test": "^1.55.0",
-    "@ts-safeql/eslint-plugin": "^3.6.12",
+    "@ts-safeql/eslint-plugin": "^4.0.1",
     "@types/dotenv-safe": "8.1.6",
     "@types/node": "^20.19.14",
     "@types/react": "^19.1.13",
@@ -39,7 +38,7 @@
     "eslint-config-upleveled": "^9.2.14",
     "jest": "30.0.4",
     "jest-environment-jsdom": "30.0.4",
-    "libpg-query": "^16.6.0",
+    "libpg-query": "^17.6.0",
     "prettier": "^3.6.2",
     "prettier-plugin-embed": "^0.5.0",
     "prettier-plugin-sql": "^0.19.2",
