Modify git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,12 @@ next-env.d.ts
 
 .eslintcache
 
+
 # Playwright
 node_modules/
 /test-results/
-/playwright/report/
+/playwright-report/
 /blob-report/
 /playwright/.cache/
+/playwright/report/
+/playwright/test-results/
